@@ -1,3 +1,9 @@
+2005-11-21	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-preferences-dialog.c
+	  (terminal_preferences_dialog_init): Gtk+ 2.9 now includes the fix for
+	  the GtkComboBox notify::active bug.
+
 2005-11-16	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/terminal-widget.c(terminal_widget_drag_data_received): Fix
